--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -1,4 +1,4 @@
-name: Build Media3 Exoplayer FFmpeg
+name: Build Media3 FFmpeg
 
 on:
   workflow_dispatch:
@@ -6,35 +6,35 @@ on:
       ANDROID_NDK:
         description: "ANDROID_NDK"
         required: true
-        default: 'r26d'
+        default: 'r27c'
       ANDROID_ABI:
         description: "ANDROID_ABI"
         required: true
-        default: '34'
+        default: '27'
       ENABLED_DECODERS:
         description: "ENABLED_DECODERS"
         required: true
         default: 'vorbis opus flac alac pcm_mulaw pcm_alaw mp3 amrnb amrwb aac ac3 eac3 dca mlp truehd'
-      FFMPEG_RELEASE_BRANCH:
-        description: "FFMPEG_RELEASE_BRANCH"
+      FFMPEG_BRANCH:
+        description: "FFMPEG_BRANCH"
         required: true
-        default: '7.0'
+        default: 'release/7.1'
 
 jobs:
-  Build-Media3-Exoplayer-FFmpeg:
+  Build-Media3-FFmpeg:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
+      - name: Setup JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'zulu'
           
-      - name: Set up Android NDK
+      - name: Setup Android NDK
         run: |
           cd "$GITHUB_WORKSPACE"
           wget https://dl.google.com/android/repository/android-ndk-${{ github.event.inputs.ANDROID_NDK }}-linux.zip
@@ -42,14 +42,14 @@ jobs:
           rm -rf android-ndk-${{ github.event.inputs.ANDROID_NDK }}-linux.zip
 
 
-      - name: Clone Media3 Exoplayer FFmpeg
+      - name: Clone Media3 FFmpeg
         run: |
           cd "$GITHUB_WORKSPACE"
           git clone https://github.com/androidx/media -b release
           cd media/libraries/decoder_ffmpeg
           git clone git://source.ffmpeg.org/ffmpeg
 
-      - name: Build Media3 Exoplayer FFmpeg
+      - name: Build Media3 FFmpeg JNI
         run: |
           FFMPEG_MODULE_PATH="$GITHUB_WORKSPACE"/media/libraries/decoder_ffmpeg/src/main
           NDK_PATH="$GITHUB_WORKSPACE"/android-ndk-${{ github.event.inputs.ANDROID_NDK }}
@@ -57,7 +57,7 @@ jobs:
           ANDROID_ABI=${{ github.event.inputs.ANDROID_ABI }}
           ENABLED_DECODERS=(${{ github.event.inputs.ENABLED_DECODERS }})
           cd "$GITHUB_WORKSPACE"/media/libraries/decoder_ffmpeg/ffmpeg
-          git checkout release/${{ github.event.inputs.FFMPEG_RELEASE_BRANCH }} && \
+          git checkout ${{ github.event.inputs.FFMPEG_BRANCH }} && \
           FFMPEG_PATH="$(pwd)"
           cd "${FFMPEG_MODULE_PATH}/jni" && \
           ln -s "$FFMPEG_PATH" ffmpeg
@@ -65,9 +65,21 @@ jobs:
           ./build_ffmpeg.sh \
           "${FFMPEG_MODULE_PATH}" "${NDK_PATH}" "${HOST_PLATFORM}" "${ANDROID_ABI}" "${ENABLED_DECODERS[@]}"
 
-      - name: Upload Media3 Exoplayer FFmpeg
+      - name: Build Media3 FFmpeg AAR
+        run: |
+          cd "$GITHUB_WORKSPACE"/media
+          ./gradlew lib-decoder-ffmpeg:assembleRelease
+
+      - name: Upload Media3 FFmpeg JNI
         uses: actions/upload-artifact@v4
         with:
-          name: Media3 Exoplayer FFmpeg
+          name: Media3-FFmpeg-JNI
           path: |
             media/libraries/decoder_ffmpeg/ffmpeg/android-libs/*
+
+      - name: Upload Media3 FFmpeg AAR
+        uses: actions/upload-artifact@v4
+        with:
+          name: Media3-FFmpeg-AAR
+          path: |
+            media/libraries/decoder_ffmpeg/buildout/outputs/aar/*
