--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -1,4 +1,4 @@
-name: Build Media3 FFmpeg
+name: Build Media3 Exoplayer FFmpeg
 
 on:
   workflow_dispatch:
@@ -6,59 +6,58 @@ on:
       ANDROID_NDK:
         description: "ANDROID_NDK"
         required: true
-        default: 'r27c'
+        default: 'r26d'
       ANDROID_ABI:
         description: "ANDROID_ABI"
         required: true
-        default: '27'
+        default: '21'
       ENABLED_DECODERS:
         description: "ENABLED_DECODERS"
         required: true
-        default: 'vorbis opus flac alac pcm_mulaw pcm_alaw mp3 amrnb amrwb aac ac3 eac3 dca mlp truehd'
-      FFMPEG_BRANCH:
-        description: "FFMPEG_BRANCH"
+        default: 'vorbis opus flac alac pcm_mulaw pcm_alaw mp3 amrnb amrwb aac ac3 eac3 dca mlp truehd libarcdav3a'
+      FFMPEG_RELEASE_BRANCH:
+        description: "FFMPEG_RELEASE_BRANCH"
         required: true
-        default: 'release/7.1'
+        default: 'main'
 
 jobs:
-  Build-Media3-FFmpeg:
+  Build-Media3-Exoplayer-FFmpeg:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup JDK 17
+      - name: Set up JDK
         uses: actions/setup-java@v4
         with:
           java-version: '17'
-          distribution: 'zulu'
+          distribution: 'adopt'
           
-      - name: Setup Android NDK
+      - name: Set up Android NDK
         run: |
           cd "$GITHUB_WORKSPACE"
           wget https://dl.google.com/android/repository/android-ndk-${{ github.event.inputs.ANDROID_NDK }}-linux.zip
           unzip android-ndk-${{ github.event.inputs.ANDROID_NDK }}-linux.zip &>/dev/null
           rm -rf android-ndk-${{ github.event.inputs.ANDROID_NDK }}-linux.zip
 
-
-      - name: Clone Media3 FFmpeg
+      - name: Build Media3 Exoplayer FFmpeg
         run: |
           cd "$GITHUB_WORKSPACE"
-          git clone https://github.com/androidx/media -b release
-          cd media/libraries/decoder_ffmpeg
-          git clone git://source.ffmpeg.org/ffmpeg
-
-      - name: Build Media3 FFmpeg JNI
-        run: |
-          sudo apt-get install ninja-build -y
-          FFMPEG_MODULE_PATH="$GITHUB_WORKSPACE"/media/libraries/decoder_ffmpeg/src/main
+          git clone https://github.com/WoKee/media -b av3a_1.5.0
+          cd media
+          FFMPEG_MODULE_PATH="$(pwd)/libraries/decoder_ffmpeg/src/main"
           NDK_PATH="$GITHUB_WORKSPACE"/android-ndk-${{ github.event.inputs.ANDROID_NDK }}
           HOST_PLATFORM="linux-x86_64"
           ANDROID_ABI=${{ github.event.inputs.ANDROID_ABI }}
           ENABLED_DECODERS=(${{ github.event.inputs.ENABLED_DECODERS }})
-          cd "$GITHUB_WORKSPACE"/media/libraries/decoder_ffmpeg/ffmpeg
-          git checkout ${{ github.event.inputs.FFMPEG_BRANCH }} && \
+          cd libraries/decoder_ffmpeg && \
+          git clone https://github.com/WoKee/ffmpeg-av3a.git && \
+          chmod +x ./ffmpeg-av3a -R && \
+          mv ffmpeg-av3a ffmpeg && \
+          chmod +x ./ffmpeg -R && \
+          cd ffmpeg && \
+          git checkout main && \
           FFMPEG_PATH="$(pwd)"
           cd "${FFMPEG_MODULE_PATH}/jni" && \
           ln -s "$FFMPEG_PATH" ffmpeg
@@ -66,21 +65,8 @@ jobs:
           ./build_ffmpeg.sh \
           "${FFMPEG_MODULE_PATH}" "${NDK_PATH}" "${HOST_PLATFORM}" "${ANDROID_ABI}" "${ENABLED_DECODERS[@]}"
 
-      - name: Build Media3 FFmpeg AAR
-        run: |
-          cd "$GITHUB_WORKSPACE"/media
-          ./gradlew lib-decoder-ffmpeg:assembleRelease
-
-      - name: Upload Media3 FFmpeg JNI
+      - name: Upload Media3 Exoplayer FFmpeg
         uses: actions/upload-artifact@v4
         with:
-          name: Media3-FFmpeg-JNI
-          path: |
-            media/libraries/decoder_ffmpeg/ffmpeg/android-libs/*
-
-      - name: Upload Media3 FFmpeg AAR
-        uses: actions/upload-artifact@v4
-        with:
-          name: Media3-FFmpeg-AAR
-          path: |
-            media/libraries/decoder_ffmpeg/buildout/outputs/aar/*
+          name: Media3 Exoplayer FFmpeg
+          path: media/libraries/decoder_ffmpeg/*
