--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -1,72 +1,85 @@
-name: Build Media3 Exoplayer FFmpeg
+name: 构建 Windows 版 FFmpeg
 
 on:
   workflow_dispatch:
     inputs:
-      ANDROID_NDK:
-        description: "ANDROID_NDK"
-        required: true
-        default: 'r26d'
-      ANDROID_ABI:
-        description: "ANDROID_ABI"
-        required: true
-        default: '21'
       ENABLED_DECODERS:
-        description: "ENABLED_DECODERS"
+        description: "启用的解码器"
         required: true
         default: 'vorbis opus flac alac pcm_mulaw pcm_alaw mp3 amrnb amrwb aac ac3 eac3 dca mlp truehd libarcdav3a'
       FFMPEG_RELEASE_BRANCH:
-        description: "FFMPEG_RELEASE_BRANCH"
+        description: "FFmpeg 分支"
         required: true
         default: 'main'
 
 jobs:
-  Build-Media3-Exoplayer-FFmpeg:
+  构建-Windows-FFmpeg:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      # 第一步：检出代码仓库
+      - name: 检出仓库
         uses: actions/checkout@v4
 
-      - name: Set up JDK
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'adopt'
+      # 第二步：安装必要的编译工具链
+      - name: 安装编译工具链
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential mingw-w64 nasm pkg-config
+
+      # 第三步：克隆 FFmpeg 源代码
+      - name: 获取 FFmpeg 源代码
+        run: |
+          git clone https://github.com/FFmpeg/FFmpeg.git ffmpeg
+          cd ffmpeg
+          git checkout ${{ github.event.inputs.FFMPEG_RELEASE_BRANCH }}
+
+      # 第四步：配置和编译 FFmpeg
+      - name: 编译 Windows 版 FFmpeg
+        run: |
+          cd ffmpeg
           
-      - name: Set up Android NDK
-        run: |
-          cd "$GITHUB_WORKSPACE"
-          wget https://dl.google.com/android/repository/android-ndk-${{ github.event.inputs.ANDROID_NDK }}-linux.zip
-          unzip android-ndk-${{ github.event.inputs.ANDROID_NDK }}-linux.zip &>/dev/null
-          rm -rf android-ndk-${{ github.event.inputs.ANDROID_NDK }}-linux.zip
-
-      - name: Build Media3 Exoplayer FFmpeg
-        run: |
-          cd "$GITHUB_WORKSPACE"
-          git clone https://github.com/WoKee/media -b av3a_1.5.0
-          cd media
-          FFMPEG_MODULE_PATH="$(pwd)/libraries/decoder_ffmpeg/src/main"
-          NDK_PATH="$GITHUB_WORKSPACE"/android-ndk-${{ github.event.inputs.ANDROID_NDK }}
-          HOST_PLATFORM="linux-x86_64"
-          ANDROID_ABI=${{ github.event.inputs.ANDROID_ABI }}
+          # 设置编译参数
           ENABLED_DECODERS=(${{ github.event.inputs.ENABLED_DECODERS }})
-          cd libraries/decoder_ffmpeg && \
-          git clone https://github.com/WoKee/ffmpeg-av3a.git && \
-          chmod +x ./ffmpeg-av3a -R && \
-          mv ffmpeg-av3a ffmpeg && \
-          chmod +x ./ffmpeg -R && \
-          cd ffmpeg && \
-          git checkout main && \
-          FFMPEG_PATH="$(pwd)"
-          cd "${FFMPEG_MODULE_PATH}/jni" && \
-          ln -s "$FFMPEG_PATH" ffmpeg
-          cd "${FFMPEG_MODULE_PATH}/jni" && \
-          ./build_ffmpeg.sh \
-          "${FFMPEG_MODULE_PATH}" "${NDK_PATH}" "${HOST_PLATFORM}" "${ANDROID_ABI}" "${ENABLED_DECODERS[@]}"
+          
+          # 配置编译选项
+          ./configure \
+            --arch=x86_64 \
+            --target-os=mingw32 \
+            --cross-prefix=x86_64-w64-mingw32- \
+            --prefix=./build \
+            --enable-shared \
+            --enable-static \
+            --enable-version3 \
+            --enable-gpl \
+            --enable-nonfree \
+            --disable-doc \
+            --disable-programs \
+            --disable-avdevice \
+            --disable-postproc \
+            --disable-avfilter \
+            --disable-pthreads \
+            --disable-w32threads \
+            --disable-os2threads \
+            --disable-debug \
+            --disable-stripping \
+            --enable-decoder="${ENABLED_DECODERS[@]}"
+          
+          # 开始编译
+          make -j$(nproc)
+          make install
 
-      - name: Upload Media3 Exoplayer FFmpeg
+      # 第五步：打包生成的可执行文件
+      - name: 打包 FFmpeg
+        run: |
+          cd ffmpeg/build/bin
+          mkdir -p ffmpeg-windows
+          cp *.exe ffmpeg-windows/
+          zip -r ffmpeg-windows.zip ffmpeg-windows
+
+      # 第六步：上传生成的压缩包
+      - name: 上传 FFmpeg 可执行文件
         uses: actions/upload-artifact@v4
         with:
-          name: Media3 Exoplayer FFmpeg
-          path: media/libraries/decoder_ffmpeg/*
+          name: FFmpeg-Windows
+          path: ffmpeg/build/bin/ffmpeg-windows.zip
