--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -1,4 +1,4 @@
-name: 构建 Windows 版 FFmpeg
+name: 构建Windows版FFmpeg
 
 on:
   workflow_dispatch:
@@ -13,7 +13,7 @@ on:
         default: 'main'
 
 jobs:
-  构建-Windows-FFmpeg:
+  build_Windows_FFmpeg:
     runs-on: ubuntu-latest
 
     steps:
