--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -53,8 +53,7 @@ jobs:
             --prefix=./build \
             --enable-shared \
             --enable-static \
-            --enable-version3 \
-            --enable-programs
+            --enable-version3
           
           # 开始编译
           make -j$(nproc)
