--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -51,6 +51,7 @@ jobs:
             --target-os=mingw32 \
             --cross-prefix=x86_64-w64-mingw32- \
             --prefix=./build \
+            --enable-libarcdav3a
             --enable-static \
             --disable-shared \
             --enable-version3
