--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -31,6 +31,7 @@ jobs:
             libfdk-aac-dev \
             libdav1d-dev \
             git
+          sudo apt-get install -y build-essential gcc make pkg-config
 
       - name: Clone FFmpeg with AV3A support
         run: |
