--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -1,5 +1,6 @@
 name: Build FFmpeg for Ubuntu with AV3A support
 
+
 on:
   workflow_dispatch:
     inputs:
@@ -12,13 +13,16 @@ on:
         required: true
         default: 'main'
 
+
 jobs:
   Build-FFmpeg-Ubuntu:
     runs-on: ubuntu-latest
 
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
 
       - name: Install build dependencies
         run: |
@@ -42,6 +46,7 @@ jobs:
             libxcb-xfixes0-dev \
             zlib1g-dev
 
+
       - name: Build FFmpeg with AV3A support
         run: |
           git clone https://github.com/WoKee/ffmpeg-av3a.git ffmpeg-av3a
@@ -55,6 +60,9 @@ jobs:
           if [ -f "version.sh" ]; then
             chmod +x version.sh
           fi
+
+          # Fix ffplay compilation issue
+          sed -i 's/#include "FilterEngine.h"//g' fftools/ffplay.c 2>/dev/null || true
           
           # Configure FFmpeg with minimal options for Ubuntu
           ./configure \
@@ -67,8 +75,10 @@ jobs:
             --extra-cflags="-fPIC" \
             --prefix="$GITHUB_WORKSPACE/ffmpeg-build"
 
+
           make -j$(nproc)
           make install
+
 
           # Create a single binary with all static libraries
           gcc -o ffmpeg_av3a \
@@ -79,8 +89,10 @@ jobs:
             -Wl,--no-whole-archive \
             -lm -lz -lpthread
 
+
           # Make the final binary executable
           chmod +x ffmpeg_av3a
+
 
       - name: Upload FFmpeg binary
         uses: actions/upload-artifact@v4
