--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -17,41 +17,41 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 修复 dlfcn-win32 编译
-        run: |
-          sudo apt-get install -y git build-essential mingw-w64
-          git clone https://github.com/dlfcn-win32/dlfcn-win32.git
-          cd dlfcn-win32
+      # - name: 修复 dlfcn-win32 编译
+      #   run: |
+      #     sudo apt-get install -y git build-essential mingw-w64
+      #     git clone https://github.com/dlfcn-win32/dlfcn-win32.git
+      #     cd dlfcn-win32
       
-          # 生成正确的 Makefile.mingw（用 Tab 缩进）
-          cat > Makefile.mingw << 'EOF'
-          CC = x86_64-w64-mingw32-gcc
-          AR = x86_64-w64-mingw32-ar
-          CFLAGS = -I./include -Wall -O2
-          TARGET = libdl.a
-          SRC = src/dlfcn.c
-          OBJ = $(SRC:.c=.o)
+      #     # 生成正确的 Makefile.mingw（用 Tab 缩进）
+      #     cat > Makefile.mingw << 'EOF'
+      #     CC = x86_64-w64-mingw32-gcc
+      #     AR = x86_64-w64-mingw32-ar
+      #     CFLAGS = -I./include -Wall -O2
+      #     TARGET = libdl.a
+      #     SRC = src/dlfcn.c
+      #     OBJ = $(SRC:.c=.o)
       
-          all: $(TARGET)
+      #     all: $(TARGET)
       
-          $(TARGET): $(OBJ)
-            $(AR) rcs $@ $^
+      #     $(TARGET): $(OBJ)
+      #       $(AR) rcs $@ $^
       
-          %.o: %.c
-            $(CC) $(CFLAGS) -c $< -o $@
+      #     %.o: %.c
+      #       $(CC) $(CFLAGS) -c $< -o $@
       
-          install:
-          	mkdir -p /usr/x86_64-w64-mingw32/include/
-          	mkdir -p /usr/x86_64-w64-mingw32/lib/
-          	cp include/dlfcn.h /usr/x86_64-w64-mingw32/include/
-          	cp libdl.a /usr/x86_64-w64-mingw32/lib/
+      #     install:
+      #     	mkdir -p /usr/x86_64-w64-mingw32/include/
+      #     	mkdir -p /usr/x86_64-w64-mingw32/lib/
+      #     	cp include/dlfcn.h /usr/x86_64-w64-mingw32/include/
+      #     	cp libdl.a /usr/x86_64-w64-mingw32/lib/
       
-          clean:
-          	rm -f $(OBJ) $(TARGET)
-          EOF
+      #     clean:
+      #     	rm -f $(OBJ) $(TARGET)
+      #     EOF
       
-          make -f Makefile.mingw
-          sudo make -f Makefile.mingw install
+      #     make -f Makefile.mingw
+      #     sudo make -f Makefile.mingw install
         
       # 第一步：检出代码仓库
       - name: 检出仓库
