--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -87,7 +87,7 @@ jobs:
           # 配置编译选项
           ./configure \
             --arch=x86_64 \
-            --target-os=mingw32 \
+            #--target-os=mingw32 \
             --cross-prefix=x86_64-w64-mingw32- \
             # --extra-cflags="-I/usr/x86_64-w64-mingw32/include" \
             # --extra-ldflags="-L/usr/x86_64-w64-mingw32/lib -ldl" \
