--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -91,7 +91,7 @@ jobs:
             #--cross-prefix=x86_64-w64-mingw32- \
             # --extra-cflags="-I/usr/x86_64-w64-mingw32/include" \
             # --extra-ldflags="-L/usr/x86_64-w64-mingw32/lib -ldl" \
-            --target-os=mingw32 \
+            #--target-os=mingw32 \
             --prefix=./build
             --enable-muxer=av3a \
             --enable-demuxer=av3a \
