--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -92,7 +92,7 @@ jobs:
             # --extra-cflags="-I/usr/x86_64-w64-mingw32/include" \
             # --extra-ldflags="-L/usr/x86_64-w64-mingw32/lib -ldl" \
             #--target-os=mingw32 \
-            --prefix=./build
+            #--prefix=./build
             --enable-muxer=av3a \
             --enable-demuxer=av3a \
             #--enable-libarcdav3a\
