--- a/.github/workflows/build2.yml
+++ b/.github/workflows/build2.yml
@@ -24,8 +24,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential mingw-w64 nasm pkg-config \
-                                gcc-mingw-w64-x86-64 g++-mingw-w64-x86-64 \
-                                pkg-config-mingw-w64
+                                gcc-mingw-w64-x86-64 g++-mingw-w64-x86-64
 
       - name: 获取 FFmpeg-AV3A 源代码
         run: |
@@ -49,7 +48,7 @@ jobs:
             --arch=x86_64 \
             --target-os=mingw32 \
             --cross-prefix=x86_64-w64-mingw32- \
-            --pkg-config=pkg-config \
+            #--pkg-config=pkg-config \
             --prefix=$PWD/build \
             --enable-muxer=av3a \
             --enable-demuxer=av3a \
